Now gets center of all positions
